force-app/main/default/objects/Follow_Up__c/fields/AF__c.field-meta.xml
<CustomField>
    <fullName>AF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AF#</label>
    <referenceTo>Audit_Finding__c</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>