force-app/main/default/objects/Follow_Up__c/fields/Files__c.field-meta.xml
<CustomField>
    <fullName>Files__c</fullName>
    <label>Files</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>