force-app/main/default/objects/Follow_Up__c/fields/QA__c.field-meta.xml
<CustomField>
    <fullName>QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA#</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>